// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminNavigation /> should render correctly - index 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-ksZaOG duCsur"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigation__card-container"
    >
      <div
        class="sc-ksZaOG fJrBYQ"
      >
        <div
          class="sc-hAZoDl bQWNOe"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-ksZaOG fJrBYQ"
      >
        <div
          class="sc-hAZoDl bQWNOe"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-ksZaOG fJrBYQ"
      >
        <div
          class="sc-hAZoDl bQWNOe"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-ksZaOG fJrBYQ"
      >
        <div
          class="sc-hAZoDl bQWNOe"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with admin user 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM cFomsy"
    >
      Admin
    </h1>
    <div
      class="admin-navigation__card-container"
    >
      <a
        aria-label="Debug settings"
        class="sc-fEOsli cXgttH sc-cxabCf fQooTn admin-navigation__card"
        href="/debug"
      >
        <div
          class="sc-bjUoiL igSAfm"
        >
          <div
            class="sc-idiyUo kSzkUC"
          />
          <div
            class="sc-dIouRR OioNl"
          >
            <div
              aria-hidden="true"
              class="sc-llJcti bdzqVg"
            >
              <div
                class="sc-iIPllB eVeYf date container"
              />
              <div
                class="sc-gicCDI hGHHuy"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Debug settings
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Analytics"
        class="sc-fEOsli cXgttH sc-cxabCf fQooTn admin-navigation__card"
        href="/admin/analytics"
      >
        <div
          class="sc-bjUoiL igSAfm"
        >
          <div
            class="sc-idiyUo kSzkUC"
          />
          <div
            class="sc-dIouRR OioNl"
          >
            <div
              aria-hidden="true"
              class="sc-llJcti bdzqVg"
            >
              <div
                class="sc-iIPllB eVeYf date container"
              />
              <div
                class="sc-gicCDI hGHHuy"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Analytics
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Emails"
        class="sc-fEOsli cXgttH sc-cxabCf fQooTn admin-navigation__card"
        href="/admin/emails"
      >
        <div
          class="sc-bjUoiL igSAfm"
        >
          <div
            class="sc-idiyUo kSzkUC"
          />
          <div
            class="sc-dIouRR OioNl"
          >
            <div
              aria-hidden="true"
              class="sc-llJcti bdzqVg"
            >
              <div
                class="sc-iIPllB eVeYf date container"
              />
              <div
                class="sc-gicCDI hGHHuy"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Emails
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Notifications"
        class="sc-fEOsli cXgttH sc-cxabCf fQooTn admin-navigation__card"
        href="/admin/notifications"
      >
        <div
          class="sc-bjUoiL igSAfm"
        >
          <div
            class="sc-idiyUo kSzkUC"
          />
          <div
            class="sc-dIouRR OioNl"
          >
            <div
              aria-hidden="true"
              class="sc-llJcti bdzqVg"
            >
              <div
                class="sc-iIPllB eVeYf date container"
              />
              <div
                class="sc-gicCDI hGHHuy"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Notifications
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Users"
        class="sc-fEOsli cXgttH sc-cxabCf fQooTn admin-navigation__card"
        href="/admin/users"
      >
        <div
          class="sc-bjUoiL igSAfm"
        >
          <div
            class="sc-idiyUo kSzkUC"
          />
          <div
            class="sc-dIouRR OioNl"
          >
            <div
              aria-hidden="true"
              class="sc-llJcti bdzqVg"
            >
              <div
                class="sc-iIPllB eVeYf date container"
              />
              <div
                class="sc-gicCDI hGHHuy"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Users
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with auth error 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-ksZaOG duCsur"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigation__card-container"
    >
      <div
        class="sc-ksZaOG fJrBYQ"
      >
        <div
          class="sc-hAZoDl bQWNOe"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-ksZaOG fJrBYQ"
      >
        <div
          class="sc-hAZoDl bQWNOe"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-ksZaOG fJrBYQ"
      >
        <div
          class="sc-hAZoDl bQWNOe"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-ksZaOG fJrBYQ"
      >
        <div
          class="sc-hAZoDl bQWNOe"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
  <div
    class="sc-iqcoie fvEXqf"
  >
    <h1
      class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
      id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
    >
      This is taking a while. Maybe something isn't quite right...
    </h1>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with initial state 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-ksZaOG duCsur"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigation__card-container"
    >
      <div
        class="sc-ksZaOG fJrBYQ"
      >
        <div
          class="sc-hAZoDl bQWNOe"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-ksZaOG fJrBYQ"
      >
        <div
          class="sc-hAZoDl bQWNOe"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-ksZaOG fJrBYQ"
      >
        <div
          class="sc-hAZoDl bQWNOe"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-ksZaOG fJrBYQ"
      >
        <div
          class="sc-hAZoDl bQWNOe"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with user 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-iqcoie fvEXqf"
    >
      <h1
        class="sc-gsnTZi cTWewb sc-breuTD kCJHVK"
        id="admin-only"
      >
        Admin only
      </h1>
      <span
        class="sc-himrzO lJcae"
      >
        You need to be logged in with an admin account to view this content.
        <br />
        <a
          class="sc-iBkjds kXOvCG"
          href="/login"
        >
          Got a different admin account? Log in here.
        </a>
      </span>
    </div>
  </div>
</div>
`;
